alpm-types/src/snapshots/source::invalid_filename@case_5.snap
---
source: alpm-types/src/source.rs
---
error: invalid package artifact source
 | 
 | foo:::/absolute/path
 | ~~~~~^
 | 
 = note: File name (:/absolute/path) contains invalid characters: /
